--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.11.13",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "react-router-dom": "^5.2.0"
   }
 }
